// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Badge will have a disabled attribute correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold"
  disabled="true"
>
  <div
    class="ss-badge--wrapper"
  >
    <div
      class="ss-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="ss-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a dot correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold pill dot"
  disabled="true"
>
  <!--v-if-->
</span>
`;

exports[`common/Badge will have a icon correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <div
      class="ss-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="ss-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a inverse variant color correctly 1`] = `
<span
  class="ss-badge ss-badge--primary-inverse ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a inverse variant color correctly 2`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a label correctly 1`] = `
<span
  class="ss-badge ss-badge--light ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a pill correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold pill"
  disabled="true"
>
  <div
    class="ss-badge--wrapper"
  >
    <div
      class="ss-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="ss-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 2`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--sm text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 3`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--base text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 4`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--lg text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a size correctly 5`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a text bold correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold pill dot"
  disabled="true"
>
  <!--v-if-->
</span>
`;

exports[`common/Badge will have a variant color correctly 1`] = `
<span
  class="ss-badge ss-badge--primary ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 2`] = `
<span
  class="ss-badge ss-badge--danger ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 3`] = `
<span
  class="ss-badge ss-badge--warning ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 4`] = `
<span
  class="ss-badge ss-badge--dark ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will have a variant color correctly 5`] = `
<span
  class="ss-badge ss-badge--success ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <div
      class="ss-badge--label"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will not a rounded correctly 1`] = `
<span
  class="ss-badge ss-badge--danger-inverse ss-badge--xl text-bold no-rounded"
  disabled="true"
>
  <div
    class="ss-badge--wrapper"
  >
    <div
      class="ss-badge--icon"
    >
      <font-awesome-icon-stub />
    </div>
    <div
      class="ss-badge--label has-icon"
    >
      
      This is common badge
      
    </div>
  </div>
</span>
`;

exports[`common/Badge will render and match snapshot 1`] = `
<span
  class="ss-badge ss-badge--light ss-badge--xs text-bold"
>
  <div
    class="ss-badge--wrapper"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</span>
`;
